--- a/Package.json
+++ b/Package.json
@@ -1,7 +1,7 @@
 {
   "name": "0531",
   "version": "1.0.0",
-  "description": "test",
+  "description": "npm",
   "main": "movie.js",
   "dependencies": {
     "ejs": "^2.5.6",
@@ -12,16 +12,14 @@
   },
   "devDependencies": {},
   "scripts": {
-
-    "test": "movie"
-    "prepublish": "zip -r target/my-home-123456789.zip node_modules data public router views manifest.json *js"
+    "test": "node movie.js"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/KimDongMinn/reservation-home.git"
   },
   "keywords": [
-    "reservation"
+    "npm"
   ],
   "author": "kimdongmin",
   "license": "ISC",
