--- a/Package.json
+++ b/Package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {},
   "scripts": {
+    "start": "node movie.js",
     "test": "node movie.js"
   },
   "repository": {
